change to README

--- a/README
+++ b/README
@@ -5,3 +5,4 @@
 
 * ead2002toEADx.xsl: XSLT 2.0 transformation to convert EAD 2002 instances to be valid against ead_revision.rng
 
+* And this is another change by SV
