Mike's test change

--- a/README
+++ b/README
@@ -5,4 +5,6 @@
 
 * ead2002toEADx.xsl: XSLT 2.0 transformation to convert EAD 2002 instances to be valid against ead_revision.rng
 
-* This is a sample change to the readme file
+* This is a sample change to the readme file\
+
+* This is Mike's test change
